fix(tasks sorting): hide sortings when the tasks-list column is collapsed
Related to CAM-3567

--- a/webapps/client/scripts/tasklist/directives/cam-tasklist-sorting.less
+++ b/webapps/client/scripts/tasklist/directives/cam-tasklist-sorting.less
@@ -91,3 +91,8 @@ section.column {
     }
   }
 }
+
+
+.list-column-close section.tasks-list [cam-sorting-choices] {
+  display: none;
+}
